# kzsekai

./: .gitignore  Cargo.toml  README.md  conf.json
client-rust/: Cargo.toml  README.md
client-rust/src/: conf.rs  main.rs
client-rust/src/sites/: cosplayjav_pl.rs  mod.rs
server-go/: .gitignore  go.mod
server-go/cosplayjav/: cosplayjav.go
server-go/cosplayjav/cmd/: main.go
server-go/cosplayjav/config/: config.go
server-go/cosplayjav/parser/: link.go  page.go  post.go
server-go/engine/: advanced.go  basic.go  engine.go  type.go
server-go/fetcher/: fetcher.go
server-go/hpjav/: hpjav.go
server-go/hpjav/cmd/: main.go
server-go/hpjav/config/: config.go
server-go/hpjav/parser/: page.go  post.go
server-go/scheduler/: advanced.go  basic.go
server-go/spankbang/: spankbang.go
server-go/spankbang/cmd/: main.go
server-go/spankbang/config/: config.go
server-go/spankbang/parser/: page.go  post.go
src/: conf.rs  main.rs  ui.rs
src/sites/: cosplayjav_pl.rs  japonx_vip.rs  mod.rs
