[package]
name = "sexy"
version = "0.1.2"
authors = ["Xavier Lau <c.estlavie@icloud.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
clipboard = "0.5.0"
cloudflare-bypasser = "0.1.4"
colored = "1.7.0"
lazy_static = "1.3.0"
postgres = "0.15"
rand = "0.6.5"
regex = "1.1.5"
reqwest = "0.9.14"
rocket = "0.4.0"
select = "0.4.2"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"
tempfile = "3.0.7"
