[package]
name = "sexy"
version = "0.1.3"
authors = ["Xavier Lau <c.estlavie@icloud.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
cloudflare-bypasser = "0.1.5"
colored = "1.8.0"
lazy_static = "1.3.0"
postgres = "0.15"
rand = "0.6.5"
regex = "1.1.6"
reqwest = "0.9.16"
rocket = "0.4.1"
select = "0.4.2"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
tempfile = "3.0.7"
